--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
   <title>Contact Kappa Theta Pi | Vanderbilt Technology Fraternity</title>
 <meta name="description" content="Contact Kappa Theta Pi at Vanderbilt University to learn more about computer science, engineering, technology, and innovation opportunities.">
-<link rel="canonical" href="https://ktpvandy.org/contact.html">
+<link rel="canonical" href="https://ktpvandy.org/contact">
 <meta name="keywords" content="Contact Vanderbilt fraternities, Vanderbilt computer science, Vanderbilt technology, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, the Wond'ry, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help">
   
 <meta name="keywords" content="Vanderbilt akpsi,Alpha Chi Omega, Alpha Delta Pi, Chi Omega, Delta Delta Delta, Kappa Alpha Theta, Kappa Delta, Kappa Kappa Gamma, Pi Beta Phi, Zeta Tau Alpha, Alpha Epsilon Pi, Alpha Tau Omega, Beta Theta Pi, Beta Upsilon Chi, Kappa Alpha Order, Kappa Sigma, Lambda Chi Alpha, Phi Delta Theta, Phi Kappa Psi, Pi Kappa Alpha, Sigma Alpha Epsilon, Sigma Nu, Zeta Beta Tau, Alpha Kappa Alpha, Alpha Phi Alpha, Delta Sigma Theta, Kappa Alpha Psi, Omega Psi Phi, Phi Beta Sigma, Sigma Gamma Rho, Zeta Phi Beta, Alpha Psi Lambda, Kappa Delta Chi, Lambda Phi Epsilon
