--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://static1.squarespace.com/static/vta/5c5a519771c10ba3470d8101/versioned-assets/1728407958569-DI71YIND73BBQN7RBZCZ/static.css">
 <title>Kappa Theta Pi Vanderbilt | Technology & Innovation Fraternity</title>
 <meta name="description" content="Explore Vanderbilt computer science, engineering, and technology through Kappa Theta Pi, the university’s premier professional technology fraternity.">
-<link rel="canonical" href="https://ktpvandy.org/home.html">
+<link rel="canonical" href="https://ktpvandy.org/home">
 <meta name="keywords" content="Vanderbilt computer science, Vanderbilt technology, Vanderbilt School of Engineering, Vanderbilt Wond'ry, the Wond'ry, Vanderbilt School of Engineering reviews, Vanderbilt computer science ranking, Vanderbilt technology courses, Vanderbilt engineering majors, Vanderbilt engineering acceptance rate, Vanderbilt engineering ranking">
 <meta name="keywords" content="Vanderbilt akpsi,Alpha Chi Omega, Alpha Delta Pi, Chi Omega, Delta Delta Delta, Kappa Alpha Theta, Kappa Delta, Kappa Kappa Gamma, Pi Beta Phi, Zeta Tau Alpha, Alpha Epsilon Pi, Alpha Tau Omega, Beta Theta Pi, Beta Upsilon Chi, Kappa Alpha Order, Kappa Sigma, Lambda Chi Alpha, Phi Delta Theta, Phi Kappa Psi, Pi Kappa Alpha, Sigma Alpha Epsilon, Sigma Nu, Zeta Beta Tau, Alpha Kappa Alpha, Alpha Phi Alpha, Delta Sigma Theta, Kappa Alpha Psi, Omega Psi Phi, Phi Beta Sigma, Sigma Gamma Rho, Zeta Phi Beta, Alpha Psi Lambda, Kappa Delta Chi, Lambda Phi Epsilon
 ,Vanderbilt computer science,Vandy AXO, Vandy ADPi, Vandy ChiO, Vandy TriDelt, Vandy Theta, Vandy KD, Vandy KKG, Vandy PiPhi, Vandy ZTA, Vandy AEPi, Vandy ATO, Vandy Beta, Vandy BYX, Vandy KA, Vandy KappaSig, Vandy LambdaChi, Vandy PhiDelt, Vandy PhiPsi, Vandy Pike, Vandy SAE, Vandy SNu, Vandy ZBT, Vandy AKA, Vandy Alpha, Vandy Delta, Vandy Kappas, Vandy Ques, Vandy Sigmas, Vandy SGRho, Vandy Zetas, Vandy APsi, Vandy KDChi, Vandy Lambdas
@@ -143,11 +143,11 @@
         </div>
         <nav class="header-nav">
           <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="recruitment.html">Recruitment</a></li>
-            <li><a href="brothers.html">Brothers</a></li>
-            <li><a href="ktp_in_action.html">KTP in Action</a></li>
-            <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/about">About</a></li>
+        <li><a href="/recruitment">Recruitment</a></li>
+        <li><a href="/brothers">Brothers</a></li>
+        <li><a href="/ktp-in-action">KTP in Action</a></li>
+        <li><a href="/contact">Contact</a></li>
           </ul>
         </nav>
         <button class="burger-menu" aria-label="Open Menu">
@@ -190,7 +190,7 @@
 
 </div></div><div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-cc3cbc334b9295b12ac9"><div class="sqs-block-content" id="yui_3_17_2_1_1730302289840_83">
 
-<a href="about.html" 
+            <a href="/about" 
 class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element" 
 data-initialized="true" 
 style="background-color: #2F4A8A !important;">
@@ -278,7 +278,7 @@ Learn about us
 </div></div><div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-e13e23a8f655ea59bb56"><div class="sqs-block-content" id="yui_3_17_2_1_1730302289840_90">
 
 <div class="sqs-block-button-container sqs-block-button-container--left" data-animation-role="button" data-alignment="left" data-button-size="medium" data-button-type="primary" id="yui_3_17_2_1_1730302289840_89">
-<a href="recruitment.html" 
+            <a href="/recruitment" 
 class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element" 
 data-initialized="true" 
 style="background-color: #2F4A8A !important;">
@@ -349,7 +349,7 @@ Recruitment
 </div></div><div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-8d0dda00a5b111629080"><div class="sqs-block-content" id="yui_3_17_2_1_1730302289840_97">
 
 <div class="sqs-block-button-container sqs-block-button-container--left" data-animation-role="button" data-alignment="left" data-button-size="medium" data-button-type="primary" id="yui_3_17_2_1_1730302289840_96">
-<a href="brothers.html" 
+            <a href="/brothers" 
 class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element" 
 data-initialized="true" 
 style="background-color: #2F4A8A !important;">
@@ -439,7 +439,7 @@ Brothers
               <div class="image-button-wrapper">
                 <div class="image-button sqs-dynamic-text" data-width-percentage="39.6" style="font-size: max(0.75rem, 39.6%);">
                   <div class="image-button-inner">
-                    <a href="ktp_in_action.html" 
+                    <a href="/ktp-in-action" 
  class="sqs-button-element--primary" 
  style="background-color: #2F4A8A !important;">
 KTP in Action
@@ -595,7 +595,7 @@ KTP in Action
 </div></div></div><div class="col sqs-col-0 span-0"></div></div><div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-be7ca9f32f19965d91e8"><div class="sqs-block-content" id="yui_3_17_2_1_1730302289840_104">
 
 <div class="sqs-block-button-container sqs-block-button-container--left" data-animation-role="button" data-alignment="left" data-button-size="medium" data-button-type="primary" id="yui_3_17_2_1_1730302289840_103">
-<a href="contact.html" 
+            <a href="/contact" 
 class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element" 
 data-initialized="true" 
 style="background-color: #2F4A8A !important;">
@@ -787,11 +787,11 @@ Contact
 
   <div class="sqs-html-content" style="color: white;">
     <p class="" style="white-space: pre-wrap;"><strong>Links</strong></p>
-    <p class="" style="white-space: pre-wrap;"><a href="about.html" style="color: white;">About</a></p>
-    <p class="" style="white-space: pre-wrap;"><a href="recruitment.html" style="color: white;">Recruitment</a></p>
+    <p class="" style="white-space: pre-wrap;"><a href="/about" style="color: white;">About</a></p>
+    <p class="" style="white-space: pre-wrap;"><a href="/recruitment" style="color: white;">Recruitment</a></p>
     <p class="" style="white-space: pre-wrap;"></p>
-    <p class="" style="white-space: pre-wrap;"><a href="ktp_in_action.html" style="color: white;">KTP in Action</a></p>
-    <p class="" style="white-space: pre-wrap;"><a href="contact.html" style="color: white;">Contact</a></p>
+    <p class="" style="white-space: pre-wrap;"><a href="/ktp-in-action" style="color: white;">KTP in Action</a></p>
+    <p class="" style="white-space: pre-wrap;"><a href="/contact" style="color: white;">Contact</a></p>
     <p class="" style="white-space: pre-wrap;"></p>
 </div>
 
