--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     <div class="hero-content">
       <h1>Kappa Theta Pi</h1>
       <p>Vanderbilt's only Professional Technology Fraternity.</p>
-      <a href="about.html" class="btn">Learn about us</a>
+      <a href="/about" class="btn">Learn about us</a>
     </div>
   </section>
 
@@ -431,7 +431,7 @@
       <div class="involvement-content">
         <h2>Get involved.</h2>
         <p>See what makes KTP stand out and learn more about our recruitment process.</p>
-        <a href="recruitment.html" class="btn">Recruitment</a>
+        <a href="/recruitment" class="btn">Recruitment</a>
       </div>
     </section>
 
@@ -441,7 +441,7 @@
       <div class="brothers-content">
         <h2>Get ahead.</h2>
         <p>Learn about our accomplished brothers and alumni, and how we can help you.</p>
-        <a href="brothers.html" class="btn">Brothers</a>
+        <a href="/brothers" class="btn">Brothers</a>
       </div>
     </section>
 
@@ -450,7 +450,7 @@
         <div class="comfortable-text">
           <h5>Get comfortable.</h5>
           <h2>Explore our home and what makes it special.</h2>
-          <a href="ktp_in_action.html" class="btn">KTP in Action</a>
+          <a href="/ktp-in-action" class="btn">KTP in Action</a>
         </div>
         <div class="comfortable-image">
           <img src="images/ktp10.png" alt="KTP Members in Action" />
@@ -463,7 +463,7 @@
       <div class="learn-more-overlay"></div>
       <div class="learn-more-content">
         <h2>Want to learn more about KTP Vanderbilt?</h2>
-        <a href="contact.html" class="btn">Contact</a>
+        <a href="/contact" class="btn">Contact</a>
       </div>
     </section>
   </main>
