--- a/ktp-in-action.html
+++ b/ktp-in-action.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
 
   <meta name="description" content="See how Kappa Theta Pi drives innovation at Vanderbilt through technology projects, computer science, and engineering activities at the Wond’ry.">
-  <link rel="canonical" href="https://ktpvandy.org/ktp_in_action.html">
+  <link rel="canonical" href="https://ktpvandy.org/ktp-in-action">
   <meta name="keywords" content="Vanderbilt technology, Vanderbilt computer science, Vanderbilt School of Engineering, Vanderbilt Wond'ry, Vanderbilt engineering majors, Vanderbilt computer science ranking, Vanderbilt engineering ranking, Vanderbilt electrical engineering">
   <meta name="keywords" content="Vanderbilt akpsi,Alpha Chi Omega, Alpha Delta Pi, Chi Omega, Delta Delta Delta, Kappa Alpha Theta, Kappa Delta, Kappa Kappa Gamma, Pi Beta Phi, Zeta Tau Alpha, Alpha Epsilon Pi, Alpha Tau Omega, Beta Theta Pi, Beta Upsilon Chi, Kappa Alpha Order, Kappa Sigma, Lambda Chi Alpha, Phi Delta Theta, Phi Kappa Psi, Pi Kappa Alpha, Sigma Alpha Epsilon, Sigma Nu, Zeta Beta Tau, Alpha Kappa Alpha, Alpha Phi Alpha, Delta Sigma Theta, Kappa Alpha Psi, Omega Psi Phi, Phi Beta Sigma, Sigma Gamma Rho, Zeta Phi Beta, Alpha Psi Lambda, Kappa Delta Chi, Lambda Phi Epsilon
 ,Vanderbilt computer science,Vandy AXO, Vandy ADPi, Vandy ChiO, Vandy TriDelt, Vandy Theta, Vandy KD, Vandy KKG, Vandy PiPhi, Vandy ZTA, Vandy AEPi, Vandy ATO, Vandy Beta, Vandy BYX, Vandy KA, Vandy KappaSig, Vandy LambdaChi, Vandy PhiDelt, Vandy PhiPsi, Vandy Pike, Vandy SAE, Vandy SNu, Vandy ZBT, Vandy AKA, Vandy Alpha, Vandy Delta, Vandy Kappas, Vandy Ques, Vandy Sigmas, Vandy SGRho, Vandy Zetas, Vandy APsi, Vandy KDChi, Vandy Lambdas
@@ -134,31 +134,9 @@
 
   <script src="js/header.js"></script>
 
-  <!-- Keep your navbar if you need it; leaving as-is from your last version -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white border-top border-bottom">
-    <div class="container">
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
-              aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
-        <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="recruitment.html">Recruitment</a></li>
-          <li class="nav-item"><a class="nav-link" href="brothers.html">Brothers</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="ktp_in_action.html">KTP in Action</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
-  <main class="main-content container">
-    <header class="text-center mb-3">
-      <h1 class="page-title fw-bold" style="color:var(--primary); letter-spacing:.2px;"></h1>
-    </header>
+  <main class="main-content container" style="padding-top: 10px;">
 
     <!-- 2 on phones, 3 on smaller laptops (lg ≥992px), 4 on big screens (xl ≥1200px) -->
     <div class="row row-cols-2 row-cols-lg-3 row-cols-xl-4 g-4 gallery">
