--- a/brothers.html
+++ b/brothers.html
@@ -14,13 +14,13 @@
 
     <!-- Cache Manager for instant loading -->
     <script src="js/cache-manager.js"></script>
-    <script src="js/cache-status.js"></script>
+
 
     <!-- Footer Styles -->
     <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
     <title>Kappa Theta Pi Vanderbilt | Brothers</title>
 <meta name="description" content="Meet the brothers of Kappa Theta Pi at Vanderbilt: leaders in computer science, engineering, and technology innovation across the School of Engineering and the Wond’ry.">
-<link rel="canonical" href="https://ktpvandy.org/brothers.html">
+<link rel="canonical" href="https://ktpvandy.org/brothers">
 <meta name="keywords" content="Vanderbilt computer science, Vanderbilt computer science ranking, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt Wond'ry, Vanderbilt engineering majors, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help">
 <meta name="keywords" content="Vanderbilt akpsi,Alpha Chi Omega, Alpha Delta Pi, Chi Omega, Delta Delta Delta, Kappa Alpha Theta, Kappa Delta, Kappa Kappa Gamma, Pi Beta Phi, Zeta Tau Alpha, Alpha Epsilon Pi, Alpha Tau Omega, Beta Theta Pi, Beta Upsilon Chi, Kappa Alpha Order, Kappa Sigma, Lambda Chi Alpha, Phi Delta Theta, Phi Kappa Psi, Pi Kappa Alpha, Sigma Alpha Epsilon, Sigma Nu, Zeta Beta Tau, Alpha Kappa Alpha, Alpha Phi Alpha, Delta Sigma Theta, Kappa Alpha Psi, Omega Psi Phi, Phi Beta Sigma, Sigma Gamma Rho, Zeta Phi Beta, Alpha Psi Lambda, Kappa Delta Chi, Lambda Phi Epsilon
 ,Vanderbilt computer science,Vandy AXO, Vandy ADPi, Vandy ChiO, Vandy TriDelt, Vandy Theta, Vandy KD, Vandy KKG, Vandy PiPhi, Vandy ZTA, Vandy AEPi, Vandy ATO, Vandy Beta, Vandy BYX, Vandy KA, Vandy KappaSig, Vandy LambdaChi, Vandy PhiDelt, Vandy PhiPsi, Vandy Pike, Vandy SAE, Vandy SNu, Vandy ZBT, Vandy AKA, Vandy Alpha, Vandy Delta, Vandy Kappas, Vandy Ques, Vandy Sigmas, Vandy SGRho, Vandy Zetas, Vandy APsi, Vandy KDChi, Vandy Lambdas
