--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kappa Theta Pi - Vanderbilt</title>
+  <title>Kappa Theta Pi - Vanderbilt University | Technology Fraternity</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
   
   <!-- Component CSS files -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/header-styles/header.css">
   <link rel="stylesheet" href="css/footer-styles/footer.css">
-  <title>Kappa Theta Pi Vanderbilt | Technology, Computer Science & Engineering</title>
 <meta name="description" content="Kappa Theta Pi is Vanderbilt's premier professional technology fraternity. Learn about computer science, the School of Engineering, and innovation at the Wond’ry.">
 <link rel="canonical" href="https://ktpvandy.org/">
 <meta name="keywords" content="Vanderbilt computer science, Vanderbilt computer science ranking, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt technology courses, Vanderbilt Wond'ry, the Wond'ry, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help, Vanderbilt engineering acceptance rate, Vanderbilt engineering ranking, Vanderbilt engineering majors, Vanderbilt engineering curriculum, Vanderbilt engineering minors, Vanderbilt aerospace engineering, Vanderbilt mechanical engineering, Vanderbilt electrical engineering, Kappa Theta Pi Vanderbilt, technology fraternity Vanderbilt">
@@ -23,11 +22,52 @@
   <meta name="description" content="Explore Vanderbilt University Greek Life, including fraternities and sororities like AXO, ADPi, TriDelt, Pike, and more. Learn about Vanderbilt Computer Science, Engineering programs, and campus life.">
   
   <!-- Social share preview -->
-  <meta property="og:title" content="Vanderbilt Greek Life & Engineering" />
-  <meta property="og:description" content="Discover fraternities, sororities, and top-ranked engineering programs at Vanderbilt University." />
+  <meta property="og:title" content="Kappa Theta Pi - Vanderbilt University" />
+  <meta property="og:description" content="Kappa Theta Pi is Vanderbilt's premier professional technology fraternity. Join us for professional development, networking, and innovation in computer science and engineering." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ktpvandy.org/" />
   <meta property="og:image" content="https://ktpvandy.org/images/preview.jpg" />
+  
+  <!-- Structured Data for Rich Snippets -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Kappa Theta Pi - Vanderbilt University",
+    "url": "https://ktpvandy.org",
+    "logo": "https://ktpvandy.org/images/logo.png",
+    "description": "Kappa Theta Pi is Vanderbilt's premier professional technology fraternity. We foster leadership, celebrate diversity, and attain extraordinary success in computer science and engineering.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Nashville",
+      "addressRegion": "TN",
+      "addressCountry": "US"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/kappa-theta-pi-vanderbilt"
+    ],
+    "potentialAction": {
+      "@type": "JoinAction",
+      "target": "https://ktpvandy.org/recruitment",
+      "description": "Join Kappa Theta Pi at Vanderbilt University"
+    }
+  }
+  </script>
+  
+  <!-- Additional Structured Data for Site Navigation -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Kappa Theta Pi Vanderbilt",
+    "url": "https://ktpvandy.org",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://ktpvandy.org/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 
   
   <style>
@@ -405,7 +445,7 @@
   <!-- Header will be injected by component -->
   
   <section class="hero">
-    <img src="images-compressed/campus.jpg" alt="CAMPUS" class="hero-bg" />
+                    <img src="images/campus.jpg" alt="CAMPUS" class="hero-bg" />
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h1>Kappa Theta Pi</h1>
@@ -427,7 +467,7 @@
     </section>
 
     <section class="involvement-hero">
-      <img src="images-compressed/signature.png" alt="Get Involved" class="involvement-bg" />
+                      <img src="images/signature.png" alt="Get Involved" class="involvement-bg" />
       <div class="involvement-overlay"></div>
       <div class="involvement-content">
         <h2>Get involved.</h2>
@@ -437,7 +477,7 @@
     </section>
 
     <section class="section brothers-fullscreen">
-      <img src="images-compressed/learnAboutOurBrothersBackGround.png" alt="Vanderbilt Logo" class="brothers-bg" />
+                      <img src="images/learnAboutOurBrothersBackGround.png" alt="Vanderbilt Logo" class="brothers-bg" />
       <div class="brothers-overlay"></div>
       <div class="brothers-content">
         <h2>Get ahead.</h2>
@@ -454,13 +494,13 @@
           <a href="/ktp-in-action" class="btn">KTP in Action</a>
         </div>
         <div class="comfortable-image">
-          <img src="images-compressed/ktp10.png" alt="KTP Members in Action" />
+                          <img src="images/ktp10.png" alt="KTP Members in Action" />
         </div>
       </div>
     </section>
 
     <section class="learn-more-hero">
-      <img src="images-compressed/ktp4.jpg" alt="KTP Event" class="learn-more-bg" />
+                      <img src="images/ktp4.jpg" alt="KTP Event" class="learn-more-bg" />
       <div class="learn-more-overlay"></div>
       <div class="learn-more-content">
         <h2>Want to learn more about KTP Vanderbilt?</h2>
