--- a/recruitment.html
+++ b/recruitment.html
@@ -5,8 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kappa Theta Pi – Vanderbilt</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/favicon.png">
-  <link rel="manifest" href="/manifest.json">
+      <link rel="icon" href="images/favicon.png">
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- Structured Data for Recruitment Page -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Event",
+      "name": "Kappa Theta Pi Recruitment",
+      "description": "Join Kappa Theta Pi - Vanderbilt's premier professional technology fraternity. Apply for recruitment and become part of our brotherhood.",
+      "url": "https://ktpvandy.org/recruitment",
+      "organizer": {
+        "@type": "Organization",
+        "name": "Kappa Theta Pi - Vanderbilt University"
+      },
+      "location": {
+        "@type": "Place",
+        "name": "Vanderbilt University",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Nashville",
+          "addressRegion": "TN",
+          "addressCountry": "US"
+        }
+      },
+      "potentialAction": {
+        "@type": "JoinAction",
+        "target": "https://ktpvandy.org/recruitment",
+        "description": "Apply for Kappa Theta Pi recruitment"
+      }
+    }
+    </script>
   
   <!-- Cache Manager for instant loading -->
   <script src="js/cache-manager.js"></script>
