--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
   <link rel="stylesheet" href="css/footer-styles/footer.css">
 <meta name="description" content="Kappa Theta Pi is Vanderbilt's premier professional technology fraternity. Learn about computer science, the School of Engineering, and innovation at the Wond’ry.">
 <link rel="canonical" href="https://ktpvandy.org/">
-<meta name="keywords" content="Vanderbilt computer science, Vanderbilt computer science ranking, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt technology courses, Vanderbilt Wond'ry, the Wond'ry, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help, Vanderbilt engineering acceptance rate, Vanderbilt engineering ranking, Vanderbilt engineering majors, Vanderbilt engineering curriculum, Vanderbilt engineering minors, Vanderbilt aerospace engineering, Vanderbilt mechanical engineering, Vanderbilt electrical engineering, Kappa Theta Pi Vanderbilt, technology fraternity Vanderbilt">
+<meta name="keywords" content="Kappa Theta Pi Vanderbilt, KTP Vanderbilt, technology fraternity Vanderbilt, professional fraternity Vanderbilt, Vanderbilt computer science, Vanderbilt engineering, Vanderbilt Greek life, Vanderbilt technology, KTP recruitment, Vanderbilt professional development">
 <meta name="keywords" content="Vanderbilt akpsi,Alpha Chi Omega, Alpha Delta Pi, Chi Omega, Delta Delta Delta, Kappa Alpha Theta, Kappa Delta, Kappa Kappa Gamma, Pi Beta Phi, Zeta Tau Alpha, Alpha Epsilon Pi, Alpha Tau Omega, Beta Theta Pi, Beta Upsilon Chi, Kappa Alpha Order, Kappa Sigma, Lambda Chi Alpha, Phi Delta Theta, Phi Kappa Psi, Pi Kappa Alpha, Sigma Alpha Epsilon, Sigma Nu, Zeta Beta Tau, Alpha Kappa Alpha, Alpha Phi Alpha, Delta Sigma Theta, Kappa Alpha Psi, Omega Psi Phi, Phi Beta Sigma, Sigma Gamma Rho, Zeta Phi Beta, Alpha Psi Lambda, Kappa Delta Chi, Lambda Phi Epsilon
 ,Vanderbilt computer science,Vandy AXO, Vandy ADPi, Vandy ChiO, Vandy TriDelt, Vandy Theta, Vandy KD, Vandy KKG, Vandy PiPhi, Vandy ZTA, Vandy AEPi, Vandy ATO, Vandy Beta, Vandy BYX, Vandy KA, Vandy KappaSig, Vandy LambdaChi, Vandy PhiDelt, Vandy PhiPsi, Vandy Pike, Vandy SAE, Vandy SNu, Vandy ZBT, Vandy AKA, Vandy Alpha, Vandy Delta, Vandy Kappas, Vandy Ques, Vandy Sigmas, Vandy SGRho, Vandy Zetas, Vandy APsi, Vandy KDChi, Vandy Lambdas
 ,Vanderbilt Fraternities and Sororities,Vanderbilt Greek life How to join a fraternity at Vanderbilt, best fraternities at Vanderbilt, Vanderbilt ECE,Vanderbilt Technology,Fraternities Vanderbilt, Vanderbilt computer science ranking, Vanderbilt School of Engineering, Vanderbilt Frats, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt Wond'ry, Vanderbilt engineering majors, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help">
 
-<!-- 🔑 SEO & social tags -->
-  <title>Vanderbilt Greek Life & Engineering | Fraternities, Sororities, and Student Life</title>
-  <meta name="description" content="Explore Vanderbilt University Greek Life, including fraternities and sororities like AXO, ADPi, TriDelt, Pike, and more. Learn about Vanderbilt Computer Science, Engineering programs, and campus life.">
-  
-  <!-- Social share preview -->
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Kappa Theta Pi - Vanderbilt University" />
   <meta property="og:description" content="Kappa Theta Pi is Vanderbilt's premier professional technology fraternity. Join us for professional development, networking, and innovation in computer science and engineering." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ktpvandy.org/" />
-  <meta property="og:image" content="https://ktpvandy.org/images/preview.jpg" />
+  <meta property="og:image" content="https://ktpvandy.org/images/logo.png" />
+  <meta property="og:site_name" content="Kappa Theta Pi Vanderbilt" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kappa Theta Pi - Vanderbilt University" />
+  <meta name="twitter:description" content="Vanderbilt's premier professional technology fraternity. Professional development, networking, and innovation in computer science and engineering." />
+  <meta name="twitter:image" content="https://ktpvandy.org/images/logo.png" />
   
   <!-- Structured Data for Rich Snippets -->
   <script type="application/ld+json">
@@ -34,9 +37,11 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Kappa Theta Pi - Vanderbilt University",
+    "alternateName": "KTP Vanderbilt",
     "url": "https://ktpvandy.org",
     "logo": "https://ktpvandy.org/images/logo.png",
     "description": "Kappa Theta Pi is Vanderbilt's premier professional technology fraternity. We foster leadership, celebrate diversity, and attain extraordinary success in computer science and engineering.",
+    "foundingDate": "2023",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Nashville",
@@ -54,18 +59,53 @@
   }
   </script>
   
-  <!-- Additional Structured Data for Site Navigation -->
+  <!-- WebSite Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Kappa Theta Pi Vanderbilt",
     "url": "https://ktpvandy.org",
+    "description": "Official website of Kappa Theta Pi - Vanderbilt's premier professional technology fraternity",
     "potentialAction": {
       "@type": "SearchAction",
       "target": "https://ktpvandy.org/search?q={search_term_string}",
       "query-input": "required name=search_term_string"
     }
+  }
+  </script>
+  
+  <!-- FAQ Structured Data for Rich Snippets -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is Kappa Theta Pi?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Kappa Theta Pi is Vanderbilt University's premier professional technology fraternity. We focus on professional development, networking, and innovation in computer science and engineering fields."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I join KTP at Vanderbilt?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "KTP holds recruitment events each semester. Visit our recruitment page to learn about upcoming events and the application process for joining Vanderbilt's technology fraternity."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What majors can join KTP?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "KTP welcomes students from computer science, engineering, and related technology fields. We value diversity and welcome students interested in technology and professional development."
+        }
+      }
+    ]
   }
   </script>
 
