Beautifying Recruitment page

--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -344,7 +344,7 @@
 </section>
 
 <section class="flyer-section">
-  <a class="btn" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_0eARXFbkw1p_AEsu750HNfUg7SaVlgFC3XJYEnEHXxr1Tw/closedform">Applications Closed!</a>
+  <a class="btn" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_0eARXFbkw1p_AEsu750HNfUg7SaVlgFC3XJYEnEHXxr1Tw/closedform">Opening Soon!</a>
   <div class="flyer-container" >
     <img src="images/flyer.jpg" alt="Rush Flyer" class="flyer-img" />
   </div>
