--- a/recruitment.html
+++ b/recruitment.html
@@ -139,12 +139,12 @@
     .hero {
       background-color: var(--white);
       color: var(--white);
-      padding: 80px 20px;
+      padding: 80px 20px 30px 20px;
       text-align: center;
     }
 
     .hero h1 {
-      font-size: 2.2rem;
+      font-size: 2.7rem;
       color: var(--primary);
       margin-bottom: 15px;
       font-style: italic;
@@ -160,6 +160,7 @@
       max-width: 800px;
       margin: auto;
       color: #ccc;
+      font-size: 1.1rem;
     }
 
     /* SLIDESHOW */
@@ -167,7 +168,7 @@
       position: relative;
       height: 400px;
       overflow: hidden;
-      margin-bottom: 10px;
+      margin-bottom: 0px;
       background: white;
       border-radius: 12px;
       will-change: auto;
@@ -230,8 +231,13 @@
       color: var(--white);
       text-align: center;
     }
+    .brotherhood h2 {
+  font-size: 2.0rem; /* You can change this size as you like */
+  margin-bottom: 20px;
+  }
 
     .brotherhood p {
+      font-size: 1.1rem;
       max-width: 900px;
       margin: auto;
       font-weight: 300;
@@ -240,6 +246,8 @@
     /* FLYER */
     .flyer-section {
       text-align: center;
+      padding-top: 60px;
+      padding-bottom: 10px;
     }
 
     .btn {
@@ -250,6 +258,7 @@
       display: inline-block;
       margin-bottom: 30px;
       font-weight: 500;
+      font-size: 1.1rem
     }
 
     .btn:hover {
@@ -257,8 +266,8 @@
     }
 
     .flyer-img {
-      width: 450px;
-      max-width: 90vw;
+      width: 550px;
+      max-width: 95vw;
       border-radius: 12px;
     }
 
@@ -340,6 +349,10 @@
         width: 90%;
       }
     }
+
+    .next{
+      display: none;    
+    }
   </style>
 </head>
 <body>
@@ -349,18 +362,18 @@
 <section class="hero">
   <h1>Why rush Kappa Theta Pi?</h1>
   <h2>Academic & Professional Development</h2>
-  <p> <span style="color: black;"> Coming from a variety of fields and backgrounds, our brothers’ work experience and connections last a lifetime. <br />
-    Below is a preview of a few of the places where our members make an impact:</span>
+  <p> <span style="color: black;"> Coming from a variety of fields and backgrounds, our brothers’ work experience and connections last a lifetime.
+    Below is a preview of a few of the places where our members make an impact:
   </p>
 </section>
 
 <section class="slideshow-container">
-  <div class="slide active"><img src="images-compressed/companies/apple.png" alt="Apple"></div>
-  <div class="slide"><img src="images-compressed/companies/epichire.png" alt="EpicHire"></div>
+  <div class="slide active"><img src="images-compressed/companies/apple-.jpg" alt="Apple"></div>
+  <div class="slide"><img src="images-compressed/companies/epichire-.jpg" alt="EpicHire"></div>
   <div class="slide"><img src="images-compressed/companies/google.jpg" alt="Google"></div>
-  <div class="slide"><img src="images-compressed/companies/microsoft.png" alt="Microsoft"></div>
-  <div class="slide"><img src="images-compressed/companies/nvidia.png" alt="Nvidia"></div>
-  <div class="slide"><img src="images-compressed/companies/Netflix.png" alt="Netflix"></div>
+  <div class="slide"><img src="images-compressed/companies/microsoft -.png" alt="Microsoft"></div>
+  <div class="slide"><img src="images-compressed/companies/Nvidia-.jpg" alt="Nvidia"></div>
+  <div class="slide"><img src="images-compressed/companies/Netflix-.jpg" alt="Netflix"></div>
   <div class="next">&#10095;</div>
 </section>
 
@@ -372,9 +385,9 @@
 </section>
 
 <section class="flyer-section">
-  <a class="btn" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_0eARXFbkw1p_AEsu750HNfUg7SaVlgFC3XJYEnEHXxr1Tw/closedform">Applications Closed!</a>
+  <a class="btn" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_0eARXFbkw1p_AEsu750HNfUg7SaVlgFC3XJYEnEHXxr1Tw/closedform">Opening Soon!</a>
   <div class="flyer-container" >
-    <img src="images-compressed/flyer.jpg" alt="Rush Flyer" class="flyer-img" />
+    <img src="images-compressed/flyerRush2025.jpg" alt="Rush Flyer" class="flyer-img" />
   </div>
 </section>
 
